# context-futures

./: .gitignore  README.md  config.brooks_expanded_20x.example.toml  config.brooks_expanded_20x_alt_near.example.toml  config.brooks_expanded_20x_alt_research.example.toml  config.brooks_expanded_20x_alt_selected.example.toml  config.brooks_price_action_20x_mixed.example.toml  config.brooks_pullback.example.toml  config.brooks_pullback_20x_mixed.example.toml  config.brooks_single_account_aggressive_15pct.example.toml  config.example.toml  config.multi.example.toml  pyproject.toml  requirements.txt
configs/: README.md
docs/: README.md  brooks_and_lookahead_audit.md  brooks_price_action_validation.md  brooks_single_account_optimization.md  brooks_strategy_research.md  decision_score_telemetry.md  future_leakage_design.md
reports/: al_brooks_core_deep_research.md  al_brooks_philosophy_reassessment.md  al_brooks_price_action_analysis.md  al_brooks_strategy_taxonomy_quant_metrics.md  alt_research_selection.md  architecture_refactor_plan.md  brooks_alignment_checklist.md  brooks_and_lookahead_audit.md  brooks_crypto_optimization_roadmap.md  brooks_price_action_refactor.md  brooks_price_action_validation.md  brooks_pullback_validation.md  brooks_single_account_optimization.md  context_router_ablation.md  decision_score_telemetry.md  funding_crowding_evidence.md  interval_and_20x_leverage_review.md  oi_taker_crowding_evidence.md  paper_runner_notes.md  research_summary.md  strategy_pivot.md  structural_trade_plan.md
scripts/: analyze_setup_performance.py  analyze_trade_scores.py  backtest.py  brooks_variant_sweep.py  fetch_funding.py  fetch_klines.py  grid_search.py  live_rest_runner.py  monthly_returns.py  paper_runner.py  portfolio_backtest.py  portfolio_risk_sweep.py  risk_scenarios.py  walk_forward.py  walk_forward_multi.py
tests/: helpers.py  test_artifacts_reporting.py  test_brooks_candidates.py  test_brooks_context.py  test_brooks_flow.py  test_config_universe.py  test_core.py  test_market_view.py  (+1 more)
(+204 files in other folders)
