[project]
name = "bn-quant"
version = "0.1.0"
description = "Research and execution framework for Binance USD-M futures strategies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bnq-backtest = "bn_quant.cli.backtest:main"
bnq-portfolio-backtest = "bn_quant.cli.portfolio_backtest:main"
bnq-fetch-klines = "bn_quant.cli.fetch_klines:main"
bnq-fetch-funding = "bn_quant.cli.fetch_funding:main"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["bn_quant"]
strict = false
warn_unused_ignores = true
