[project]
name = "context-futures"
version = "0.1.0"
description = "Research and execution framework for Binance USD-M futures strategies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=16.0.0",
]

[project.scripts]
cf-backtest = "context_futures.cli.backtest:main"
cf-portfolio-backtest = "context_futures.cli.portfolio_backtest:main"
cf-universe-backtest = "context_futures.cli.universe_backtest:main"
cf-fetch-klines = "context_futures.cli.fetch_klines:main"
cf-fetch-funding = "context_futures.cli.fetch_funding:main"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["context_futures"]
strict = false
warn_unused_ignores = true
